feat(auth-service): Add Keycloak Admin Client configuration
Configures the auth-service to use a dedicated confidential client (auth-service-admin-client)
for programmatic interaction with Keycloak's Admin API. This enables features like:
- User registration (creating users in Keycloak)
- Admin user and role management (assigning roles, viewing/managing users)

--- a/auth-service.yml
+++ b/auth-service.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:postgresql://auth-service-db:5432/${AUTH_SERVICE_D}
+    url: jdbc:postgresql://auth-service-db:5432/${AUTH_SERVICE_DB}
     username: ${AUTH_SERVICE_USER}
     password: ${AUTH_SERVICE_PASSWORD}
     driver-class-name: org.postgresql.Driver
