--- a/auth-service.yml
+++ b/auth-service.yml
@@ -27,7 +27,7 @@ keycloak:
     server-uri: http://localhost:9090
     realm: majheriserve # The realm that our admin client will manage
     client-id: majheriserve-backend-admin # A confidential client with a service account for our auth-service to programmatically manage Keycloak resources
-    client-secret: qgafmhoYNsJ2sot9fStQUiytWGe95vzK
+    client-secret: ${KEYCLOAK_ADMIN_CLIENT_SECRET}
 
 logging:
   level:
